Изменения внутренней логики